--- a/css/pallet1.css
+++ b/css/pallet1.css
@@ -1,38 +1,43 @@
-body{
---grey: #7E7E7E;
---greyshade: #666;
---greyglare: #B3B3B3;
---brown: #8F7E4F;
---brownshade: #7F6E3F;
---brownglare: #9F8E5F;
---browndark: #524632;
---brownlight: #86836D;
---brownlightshade: #76735D;
---brownlightglare: #96937D;
---tan: #D2B48C;
---cream: #ECFEAA;
---sandstone: #E2DE84;
---reddark: #9E2B25;
---red: #EE6352;
---orange: #F18F01;
---bloodorange: #F42C04;
---yellow: #CEFF1A;
---yellowshade: #BEEF0A;
---yellowdark: #C0D461;
---gold: #EDE580;
---green: #82D173;
---greenshade: #232623;
---greenglare: #495349;
---greenlight: #64ff64;
---greenlighttrans: rgba(100,255,100,0); 
---blue: #3FA7D6;
---bluelight: #8E8DBE;
---bluelightglare: #9E9DCE;
---bluecedar: #363A55;
---bluecedarshade: #262A45;
---bluecedarglare: #464A65;
---pink: #F6828C;
---pinklight: #EBBAB9;
---purple: #C200FB;
---darkpurple: #51355A;
+body {
+    --grey3: #333;
+    --grey6: #666;
+    --grey9: #999;
+    --greyc: #CCC;
+    --grey: #7E7E7E;
+    --greyshade: #666;
+    --greyglare: #B3B3B3;
+    --brown: #8F7E4F;
+    --brownshade: #7F6E3F;
+    --brownglare: #9F8E5F;
+    --browndark: #524632;
+    --brownlight: #86836D;
+    --brownlightshade: #76735D;
+    --brownlightglare: #96937D;
+    --tan: #D2B48C;
+    --cream: #ECFEAA;
+    --sandstone: #E2DE84;
+    --reddark: #9E2B25;
+    --red: #EE6352;
+    --orange: #F18F01;
+    --bloodorange: #F42C04;
+    --yellow: #CEFF1A;
+    --yellowshade: #BEEF0A;
+    --yellowdark: #C0D461;
+    --gold: #EDE580;
+    --green: #82D173;
+    --greenshade: #232623;
+    --greenglare: #495349;
+    --greenlight: #64ff64;
+    --greenlighttrans: rgba(100, 255, 100, 0);
+    --blue: #3FA7D6;
+    --bluelight: #8E8DBE;
+    --bluelightglare: #9E9DCE;
+    --bluecedar: #363A55;
+    --bluecedarshade: #262A45;
+    --bluecedarglare: #464A65;
+    --pink: #F6828C;
+    --pinkdark: #C65B7C;
+    --pinklight: #EBBAB9;
+    --purple: #C200FB;
+    --darkpurple: #51355A;
 }
