--- a/css/pallet1.css
+++ b/css/pallet1.css
@@ -1,43 +1,44 @@
 body {
-    --gray3: #333;
-    --gray6: #666;
-    --gray9: #999;
-    --grayc: #CCC;
-    --gray: #7E7E7E;
-    --grayshade: #666;
-    --grayglare: #B3B3B3;
-    --brown: #8F7E4F;
-    --brownshade: #7F6E3F;
-    --brownglare: #9F8E5F;
-    --browndark: #524632;
-    --brownlight: #86836D;
+    --transparent    : rgba(0, 0, 0, 0);
+    --gray3          : #333;
+    --gray6          : #666;
+    --gray9          : #999;
+    --grayc          : #CCC;
+    --gray           : #7E7E7E;
+    --grayshade      : #666;
+    --grayglare      : #B3B3B3;
+    --brown          : #8F7E4F;
+    --brownshade     : #7F6E3F;
+    --brownglare     : #9F8E5F;
+    --browndark      : #524632;
+    --brownlight     : #86836D;
     --brownlightshade: #76735D;
     --brownlightglare: #96937D;
-    --tan: #D2B48C;
-    --cream: #ECFEAA;
-    --sandstone: #E2DE84;
-    --reddark: #9E2B25;
-    --red: #EE6352;
-    --orange: #F18F01;
-    --bloodorange: #F42C04;
-    --yellow: #CEFF1A;
-    --yellowshade: #BEEF0A;
-    --yellowdark: #C0D461;
-    --gold: #EDE580;
-    --green: #82D173;
-    --greenshade: #232623;
-    --greenglare: #495349;
-    --greenlight: #64ff64;
+    --tan            : #D2B48C;
+    --cream          : #ECFEAA;
+    --sandstone      : #E2DE84;
+    --reddark        : #9E2B25;
+    --red            : #EE6352;
+    --orange         : #F18F01;
+    --bloodorange    : #F42C04;
+    --yellow         : #CEFF1A;
+    --yellowshade    : #BEEF0A;
+    --yellowdark     : #C0D461;
+    --gold           : #EDE580;
+    --green          : #82D173;
+    --greenshade     : #232623;
+    --greenglare     : #495349;
+    --greenlight     : #64ff64;
     --greenlighttrans: rgba(100, 255, 100, 0);
-    --blue: #3FA7D6;
-    --bluelight: #8E8DBE;
-    --bluelightglare: #9E9DCE;
-    --bluecedar: #363A55;
-    --bluecedarshade: #262A45;
-    --bluecedarglare: #464A65;
-    --pink: #F6828C;
-    --pinkdark: #C65B7C;
-    --pinklight: #EBBAB9;
-    --purple: #C200FB;
-    --darkpurple: #51355A;
+    --blue           : #3FA7D6;
+    --bluelight      : #8E8DBE;
+    --bluelightglare : #9E9DCE;
+    --bluecedar      : #363A55;
+    --bluecedarshade : #262A45;
+    --bluecedarglare : #464A65;
+    --pink           : #F6828C;
+    --pinkdark       : #C65B7C;
+    --pinklight      : #EBBAB9;
+    --purple         : #C200FB;
+    --darkpurple     : #51355A;
 }
