--- a/css/flamingone.css
+++ b/css/flamingone.css
@@ -1,5 +1,5 @@
-
-html,body {
+html,
+body {
     background-color: black;
     width           : 100%;
     height          : 100%;
@@ -7,13 +7,13 @@ html,body {
     border          : 0;
     outline         : 0;
     font-family     : Georgia;
-    display        : flex;
-    align-items    : center;
-    justify-content: center;
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
 }
 
-svg{
-    overflow: visible;
+#draggerContainer{
+    visibility: collapse;
 }
 
 #svgContainer {
@@ -22,19 +22,20 @@ svg{
     width           : 90%;
     height          : 90%;
     border-radius   : 2em;
+    transform       : transale3d(0, 0, 0);
 }
 
-#curtain{
-    position: fixed;
-    width: 100%;
-    height:100%;
+#curtain {
+    position        : fixed;
+    width           : 100%;
+    height          : 100%;
     background-color: black;
-    pointer-events: none;
+    pointer-events  : none;
 }
 
-path{
-    fill:none;
-    stroke: black;
+path {
+    fill        : none;
+    stroke      : black;
     stroke-width: 1;
 }
 
@@ -50,6 +51,6 @@ path{
     fill: black;
 }
 
-.beak{
+.beak {
     fill: var(--pink);
 }
