--- a/css/firstMap.css
+++ b/css/firstMap.css
@@ -49,9 +49,9 @@
 /* patterns */
 /* these do nothing at the moment please fix */
 body {
-    --skyBot: url('/assets/firstMap/skyGrayBot.png');
-    --skyMid: url('/assets/firstMap/skyGrayMid.png');
-    --skyTop: url('/assets/firstMap/skyGrayTop.png');
+    --skyBot: url('assets/firstMap/skyGrayBot.png');
+    --skyMid: url('assets/firstMap/skyGrayMid.png');
+    --skyTop: url('assets/firstMap/skyGrayTop.png');
 }
 
 .skyBot {
@@ -115,4 +115,8 @@ body {
 
 #dirtRoadEast{
     fill: black;
+}
+
+#graveDirt.tilled{
+    fill: green;
 }
